traefik/03-backend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend
          ports:
            - name: web
              containerPort: 80
