traefik/03-database.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: database
  labels:
    app: database

spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: database
          ports:
            - name: web
              containerPort: 80
