traefik/03-frontend.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: frontend
