traefik/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: web
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: mariadb
                port:
                  name: bdd
